<resources>
    <string name="app_name">NexTrip</string>
    <string name="title_activity_create_trip">CreateTrip</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="share">SHARE</string>
    <string name="update">UPDATE</string>
    <string name="todo">DELETE</string>
    <string name="itemname">ItemName</string>
    <string name="isrenteditem">isRentedItem</string>
    <string name="aboutitem">aboutitem</string>
    <string name="locationname">locationname</string>
    <string name="citydistrict">citydistrict</string>
    <string name="city">city</string>
    <string name="district">district</string>
    <string name="locationdescription">locationdescription</string>
    <string name="arrivaldate">arrivaldate</string>
    <string name="arrivaltime">arrivaltime</string>
    <string name="title_activity_maps_current_location_hotels">MapsActivity_CurrentLocation_Hotels
    </string>
    <string name="title_activity_maps_em_users">MapsActivity_em_users</string>
</resources>