<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"

    app:cardUseCompatPadding="true"
    android:layout_marginTop="5dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <LinearLayout
        android:id="@+id/component_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#401C77FA"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/list_location_show_iscompleted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/locationname"
                android:textColor="#1C77FA"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/list_location_show_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/locationname"
                android:drawableLeft="@drawable/ic_mylocation"
                android:drawablePadding="5dp"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/backpackExpandRLayout"
                android:visibility="visible">

                <TextView
                    android:id="@+id/list_location_show_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="5dp"
                    android:text="@string/city"
                    android:textColor="#575757"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/list_location_show_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/district"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="5dp"
                    android:textColor="#575757"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/list_location_show_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/locationdescription"
                    android:drawableLeft="@drawable/ic_description"
                    android:drawablePadding="5dp"
                    android:textColor="#575757"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/list_location_show_arrival_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="140dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/arrivaldate"
                    android:drawableLeft="@drawable/ic_date"
                    android:drawablePadding="5dp"
                    android:textColor="#575757"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/list_location_show_arrival_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="165dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/arrivaltime"
                    android:textColor="#575757"
                    android:drawablePadding="5dp"
                    android:drawableLeft="@drawable/ic_time"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>