<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/backpackCard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"

    app:cardUseCompatPadding="true"
    android:layout_marginTop="5dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <LinearLayout
        android:id="@+id/component_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#401C77FA"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/list_location_txt_show_iscompleted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="isCompleted"
                android:textColor="#1C77FA"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/memberExpandRLayout"
                android:visibility="visible"
                >

                <TextView
                    android:id="@+id/list_location_txt_show_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:drawableLeft="@drawable/ic_mylocation"
                    android:drawablePadding="5dp"
                    android:text="@string/locationname"
                    android:textColor="#000000"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/list_location_txt_show_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="46dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="5dp"
                    android:text="@string/city"
                    android:textColor="#575757"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/list_location_txt_show_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/district"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="5dp"
                    android:textColor="#575757"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/list_location_txt_show_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/locationdescription"
                    android:drawableLeft="@drawable/ic_description"
                    android:drawablePadding="5dp"
                    android:textColor="#575757"
                    android:textSize="18sp"
                    android:textStyle="normal"  />

                <TextView
                    android:id="@+id/list_location_txt_show_startdatetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="160dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/arrivaldate"
                    android:drawableLeft="@drawable/ic_date"
                    android:drawablePadding="5dp"
                    android:textColor="#575757"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/list_location_txt_show_completedatetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="185dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/arrivaldate"
                    android:drawableLeft="@drawable/ic_date"
                    android:drawablePadding="5dp"
                    android:textColor="#575757"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </RelativeLayout>


        </LinearLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>


