<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BackpackItemDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/item_details_btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="350dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageView
            android:id="@+id/item_details_img_rented"
            android:layout_width="342dp"
            android:layout_height="270dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/rent" />

        <ImageView
            android:id="@+id/item_details_img_friend_member"
            android:layout_width="342dp"
            android:layout_height="270dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/friendsitem" />

        <ImageView
            android:id="@+id/item_details_img_my"
            android:layout_width="342dp"
            android:layout_height="270dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/myitem2" />

        <TextView
            android:id="@+id/item_details_txt_show_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="aboutitem"
            android:textColor="#0BDC51"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/item_details_txt_show_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="Name"
            android:textColor="#6378F1"
            android:textSize="34sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/item_details_txt_show_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:text="Quantity"
            android:textColor="#8B92B8"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/item_details_txt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="5dp"
            android:text="desc"
            android:textColor="#8B92B8"
            android:textSize="18sp"
            android:textStyle="normal" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/details_item_btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_share"
            app:backgroundTint="@color/white"
            app:tint="@color/blue"
            android:contentDescription="@string/share" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/details_item_btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="185dp"
            android:layout_marginTop="-76dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_edit"
            app:backgroundTint="@color/green01"
            app:tint="@color/black"
            android:contentDescription="@string/update" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/details_item_btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="-78dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_delete"
            app:backgroundTint="@color/red01"
            app:tint="@color/white"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</RelativeLayout>